--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 body {
   font-size: 14px;
   font-family: 'Raleway', sans-serif;
+  /* As Helvetica Neu is a paid font i don't have, i took the similarest one in google fonts */
 }
 
 .container {
@@ -10,10 +11,18 @@ body {
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+  color: #ed5900;
+}
+
 /* Header and banner content */
 
 header {
-  border-top: 3px solid black;
+  display: flex;
+  align-items: center;
+  border-top: 5px solid #ed5900;
+  height: 8rem;
 }
 
 .headerMenu {
@@ -21,11 +30,97 @@ header {
   justify-content: space-between;
 }
 
+.social-icons {
+  display: flex;
+}
+
+.social-icons li {
+  padding: 0.4rem;
+}
+
+.social-icons i {
+  color: #ed5900;
+}
+
+.separator-image {
+  position: relative;
+  z-index: 1;
+  background: url("../img/separator-image.jpg") no-repeat;
+  /* we use the boxshadow in order to create the greycolor background on top of the image (as it was in photoshop). */
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.05);
+  background-position: center;
+  background-size: cover;
+  height: 10rem;
+  opacity: 0.6;
+}
 
 /* Main content */
 
-/* Form */
+.wrapper {
+  display: flex;
+}
+
+section {
+  margin-top: 2rem;
+  margin-right: 2rem;
+  position: relative;
+  z-index: 1;
+  width: 950px;
+}
+
+section img {
+  /* we use the absolute position here to put the book on top of the banner here. */
+  position: absolute;
+  z-index: 2;
+  width: 250px;
+  padding: 3rem;
+  right: 0;
+  top: -7rem;
+}
+
+section h1 {
+  color: #ed5900;
+  font-weight: 600;
+  line-height: 2rem;
+  font-size: 1.6rem;
+  padding  : 1rem 45% 2rem 0 ;
+  border-bottom: 1px solid #f2f2f2 ;
+}
+
+section h2 {
+  color: #b1b1b1;
+  padding: 2rem 45% 2rem 0;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+}
+
+section p {
+  line-height: 1.3rem;
+  padding-bottom: 2rem;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+section .emphasizes {
+  font-weight: 700;
+  color: #ed5900;
+  padding: 2rem 0;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+/* Aside Form application */
+
+aside {
+  margin-top: 2rem;
+  padding: 0 2rem;
+  position: relative;
+  background-color: #ececec;
+}
 
 /* Footer */
 
 /* Popup */
+
+/* Media Queries */
