--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-  width: 1100px;
+  width: 1000px;
   margin: 0 auto;
 }
 
@@ -65,7 +65,7 @@ section {
   margin-right: 2rem;
   position: relative;
   z-index: 1;
-  width: 950px;
+  width: 75%;
 }
 
 section img {
@@ -83,7 +83,7 @@ section h1 {
   font-weight: 600;
   line-height: 2rem;
   font-size: 1.6rem;
-  padding  : 1rem 45% 2rem 0 ;
+  padding  : 1rem 45% 3rem 0 ;
   border-bottom: 1px solid #f2f2f2 ;
 }
 
@@ -113,14 +113,139 @@ section .emphasizes {
 /* Aside Form application */
 
 aside {
+  width: 25%;
+  height: 23rem;
   margin-top: 2rem;
   padding: 0 2rem;
   position: relative;
   background-color: #ececec;
 }
 
+form h3 {
+  font-weight: 700;
+  color: #ed5900;
+  padding: 2rem 0 0.5rem 0;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+form fieldset {
+  display: flex;
+  justify-content: space-between;
+}
+
+form input {
+  padding: 0.5rem;
+  margin: 1rem 0;
+  width: 90%;
+  border: 1px solid #cacaca;
+}
+
+/* formcheck styling that is a big more advanved css */
+
+.formCheck {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.formCheck label {
+  font-size: 0.8rem;
+  padding: 0.5rem;
+}
+
+.formCheck [type="checkbox"]:not(:checked),
+.formCheck [type="checkbox"]:checked {
+  display: none;
+}
+
+.formCheck [type="checkbox"]:not(:checked) + label,
+.formCheck [type="checkbox"]:checked + label {
+  position: relative;
+  padding-left: 25px;
+  cursor: pointer;
+}
+
+.formCheck [type="checkbox"]:not(:checked) + label:before,
+.formCheck [type="checkbox"]:checked + label:before {
+  content: '';
+  position: absolute;
+  left:0;
+  width: 12px; height: 12px;
+  background-color: white;
+  border: 1px solid #cacaca;
+  border-radius: 2px;
+}
+
+.formCheck [type="checkbox"]:not(:checked) + label:after,
+.formCheck [type="checkbox"]:checked + label:after {
+  content: '✔';
+  position: absolute;
+  left: 0.2rem;
+  font-size: 14px;
+  color: #ed5900;
+  transition: all .2s;
+}
+
+.formCheck [type="checkbox"]:not(:checked) + label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+
+.formCheck [type="checkbox"]:checked + label:after {
+  opacity: 1;
+  transform: scale(1);
+}
+
+
+/* Submit button */
+
+form button {
+  padding: 0.7rem;
+  margin: 1rem 0;
+  background-color: #ed5900;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 700;
+  border: none;
+  width: 100%;
+}
+
 /* Footer */
 
+footer {
+  position: relative;
+  margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  background-color: #4f4f51;
+  min-height: 9rem;
+}
+
+footer a, .footerRightContainer {
+  color: white;
+}
+
+.footer-frame {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footerRightContainer, footer ul {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.8rem;
+}
+
+footer li:before {
+  padding: 0.5rem;
+  content: "|";
+  color: grey;
+}
+
 /* Popup */
+
+.popup {
+  display: none;
+}
 
 /* Media Queries */
